# tcas-dashboard

./: README.md  main.py  pyproject.toml
app/: api_requests.py  clean_ai_com_courses.ipynb  geocode_universities.py  locations.py  main.ipynb  main.py  scraping.py  test.ipynb
app/data/: filtered_ai_com_courses.csv  final_filtered_ai_com_courses.xlsx
